<resources>
    <string name="app_name">Nugget Nav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_compass">Compass</string>
    <string name="title_map">Map</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibmF0aGFuaG9sbG93cyIsImEiOiJjazIzMzRuNHAwMGVnM2lxaGEwbTNwNGQyIn0.vsjlOi_SpKog-zkBxKW0HQ</string>
    <string name="zoom_map_in_and_out_instruction">Zoom in and out</string>
    <string name="title">NuggetNav</string>
    <string name="ok">OK</string>
    <string name="title_location_permission">Location Permissions</string>
    <string name="message_location_permission">Nugget Watch uses your location to find nearby nuggets</string>
    <string name="fetching_locations">Updating locations</string>
    <string name="locating">Locating nuggets…</string>

    <string name="tab_stores">Nearby Stores</string>
    <string name="query_feature_marker_title">Title</string>
    <string name="tab_review">My Reviews</string>

    <string name="stars">%1$s / 5</string>

    <string name="flavour">Flavour</string>
    <string name="mouthfeel">Mouthfeel</string>
    <string name="coating">Coating</string>
    <string name="sauces">Sauces</string>
    <string name="overall">Overall</string>

    <string name="prices">Prices</string>
    <string name="reviews">Reviews</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="ppn">PPN</string>
    <string name="submit">Submit</string>

    <string name="missingPrices">There are no prices to show. <a href="">Add one?</a></string>
    <string name="badPrices">Are these prices not right? <a href="">Let us know.</a></string>

    <string name="map_distance">%f%s away</string>
    <string name="map_rating_count"> (%d)</string>
</resources>
