<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/write_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_rate_review_black_24dp" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:gravity="center"
                    android:padding="16sp"
                    android:text="@string/reviews"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="40sp"
                    app:autoSizeTextType="uniform"
                    app:fontFamily="@font/oswald_regular" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/overall"
                        android:textColor="@color/white"
                        app:fontFamily="@font/oswald_medium" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:gravity="center_horizontal">

                        <me.zhanghai.android.materialratingbar.MaterialRatingBar
                            android:id="@+id/rating_overall"
                            style="@style/Widget.MaterialRatingBar.RatingBar.Indicator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="48sp"
                            android:layout_marginBottom="16sp"
                            android:isIndicator="true"
                            android:numStars="5"
                            android:stepSize="1"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:mrb_fillBackgroundStars="true"
                            app:mrb_progressBackgroundTint="#657585"
                            app:mrb_progressTint="@color/colorAccent" />

                        <ImageView
                            android:id="@+id/rating_caret"
                            android:layout_width="32sp"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/rating_overall"
                            android:layout_alignParentTop="true"
                            android:layout_marginStart="16dp"
                            android:layout_toEndOf="@+id/rating_overall"
                            android:layout_toRightOf="@+id/rating_overall"
                            android:scaleX="1"
                            android:scaleY="1"
                            android:tint="@color/white"
                            app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/rating_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/flavour"
                        android:textColor="@color/white"
                        app:fontFamily="@font/oswald_medium" />

                    <me.zhanghai.android.materialratingbar.MaterialRatingBar
                        android:id="@+id/rating_flavour"
                        style="@style/Widget.MaterialRatingBar.RatingBar.Indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16sp"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:stepSize="1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:mrb_fillBackgroundStars="true"
                        app:mrb_progressBackgroundTint="#657585"
                        app:mrb_progressTint="@color/colorAccent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/coating"
                        android:textColor="@color/white"
                        app:fontFamily="@font/oswald_medium" />

                    <me.zhanghai.android.materialratingbar.MaterialRatingBar
                        android:id="@+id/rating_coating"
                        style="@style/Widget.MaterialRatingBar.RatingBar.Indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16sp"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:stepSize="1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:mrb_fillBackgroundStars="true"
                        app:mrb_progressBackgroundTint="#657585"
                        app:mrb_progressTint="@color/colorAccent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mouthfeel"
                        android:textColor="@color/white"
                        app:fontFamily="@font/oswald_medium" />

                    <me.zhanghai.android.materialratingbar.MaterialRatingBar
                        android:id="@+id/rating_mouthfeel"
                        style="@style/Widget.MaterialRatingBar.RatingBar.Indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16sp"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:stepSize="1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:mrb_fillBackgroundStars="true"
                        app:mrb_progressBackgroundTint="#657585"
                        app:mrb_progressTint="@color/colorAccent" />

                    <TextView
                        android:id="@+id/textSauces"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sauces"
                        android:textColor="@color/white"
                        app:fontFamily="@font/oswald_medium" />

                    <me.zhanghai.android.materialratingbar.MaterialRatingBar
                        android:id="@+id/rating_sauces"
                        style="@style/Widget.MaterialRatingBar.RatingBar.Indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16sp"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:stepSize="1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:mrb_fillBackgroundStars="true"
                        app:mrb_progressBackgroundTint="#657585"
                        app:mrb_progressTint="@color/colorAccent" />

                </LinearLayout>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="75dp"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/pricesLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/prices_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16sp"
                    android:text="@string/prices"
                    android:textColor="@color/colorPrimary"
                    android:textSize="28sp"
                    app:fontFamily="@font/oswald_medium" />

                <TableRow
                    android:id="@+id/tableRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16sp"
                    android:paddingTop="8sp"
                    android:paddingRight="16sp"
                    android:paddingBottom="8sp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|left"
                        android:text="@string/price"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/quantity"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|right"
                        android:text="@string/ppn"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                </TableRow>

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/priceRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/priceMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:linksClickable="true"
                    android:padding="16sp"
                    android:text="@string/missingPrices"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/reviewsLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/reviews_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16sp"
                    android:text="@string/reviews"
                    android:textColor="@color/colorPrimary"
                    android:textSize="28sp"
                    app:fontFamily="@font/oswald_medium" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/reviewRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>